tests/rosetta/out/Python/a+b.error
type: error[T003]: unknown function: int
  --> /workspace/mochi/tests/rosetta/x/Mochi/a+b.mochi:2:11

  2 |   let a = int(input())
    |           ^

help:
  Ensure the function is defined before it's called.